// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner/> should renders correctly 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  width: 2rem;
}

.c0:before {
  content: "";
  display: block;
  padding-top: 100%;
}

.c1 {
  -webkit-animation: eYEYhP 2s linear infinite;
  animation: eYEYhP 2s linear infinite;
  height: 100%;
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.c2 {
  stroke-dasharray: 1,200;
  stroke-dashoffset: 0;
  -webkit-animation: dKIScq 1.5s ease-in-out infinite;
  animation: dKIScq 1.5s ease-in-out infinite;
  stroke-linecap: round;
  stroke: #008CC0;
  stroke-width: 3;
  stroke-miterlimit: 10;
}

<div>
  <div
    class="c0"
  >
    <svg
      class="c1"
      viewBox="25 25 50 50"
    >
      <circle
        class="c2"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
</div>
`;

exports[`<Spinner/> should renders large size correctly 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  width: 1.4rem;
}

.c0:before {
  content: "";
  display: block;
  padding-top: 100%;
}

.c3 {
  position: relative;
  margin: 0 auto;
  width: 2rem;
}

.c3:before {
  content: "";
  display: block;
  padding-top: 100%;
}

.c4 {
  position: relative;
  margin: 0 auto;
  width: 3rem;
}

.c4:before {
  content: "";
  display: block;
  padding-top: 100%;
}

.c1 {
  -webkit-animation: eYEYhP 2s linear infinite;
  animation: eYEYhP 2s linear infinite;
  height: 100%;
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.c2 {
  stroke-dasharray: 1,200;
  stroke-dashoffset: 0;
  -webkit-animation: dKIScq 1.5s ease-in-out infinite;
  animation: dKIScq 1.5s ease-in-out infinite;
  stroke-linecap: round;
  stroke: #008CC0;
  stroke-width: 3;
  stroke-miterlimit: 10;
}

<div>
  <div
    class="c0"
  >
    <svg
      class="c1"
      viewBox="25 25 50 50"
    >
      <circle
        class="c2"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
  <div
    class="c3"
  >
    <svg
      class="c1"
      viewBox="25 25 50 50"
    >
      <circle
        class="c2"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
  <div
    class="c4"
  >
    <svg
      class="c1"
      viewBox="25 25 50 50"
    >
      <circle
        class="c2"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
</div>
`;
